Added alternative text for images

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <div>
             <p>Hi! I am veda. Ilike to develop the reciepes,write the blog posts. I want to add social media and manage and take care of comments and email soon.</p><br>
             <div>
-            <img src="images/muffins.jpg" width="500" height="400"></div>
+            <img src="images/muffins.jpg" alt="batch of muffins" width="500" height="400"></div>
         I love learning new things about nutrition and that's why i'm studying online to become a health coach and also i love to code.
         this is my favourite website coded by me.</div>
         <p>My favourite reciepe is quinoa salad</p>
